# rust-actix

./: .env  Cargo.toml  README.md
migrations/2020-01-16-050010_init/: up.sql
src/: main.rs  model.rs  schema.rs
